Bug 1083922 - Doom entry when parsing security info fails. r=mcmanus, a=lmandel